# uu-pv-ass1

./: .gitignore  Makefile  README  README.md  gcl.cabal
examples/: 01_falsefalse.txt  01_falsetrue.txt  01_truefalse.txt  01_truetrue.txt  02_skip.txt  03_assign.txt  03_assignarray.txt  04_returnseq.txt  04_returnsquare.txt  05_while.txt  05_whileannotated.txt  06_fcall.txt  07_binarysearch.txt  example1.txt
src/: Expr2SMT.hs  ParseGCL.hs  Transformer.hs  WLP.hs
src/CCO/: GCL.hs
src/CCO/GCL/: AG.ag  AG.hs  Base.hs  CodeTransform.hs  Lexer.hs  Parser.hs
src/CCO/GCL/AG/: Base.ag  NonTrivialFields.ag  RenameVars.ag  WLP.ag
