name:                  gcl
version:               0.1
synopsis:              GCL Verification Engine assignment
description:           Solution for assignment 1 for Program Verification at Utrecht University.
category:              Unclassified
copyright:             (c) 2015 Rob Spoel
author:                Rob Spoel <robspoel@gmail.com>
maintainer:            Rob Spoel <robspoel@gmail.com>
stability:             provisional
homepage:              http://www.cs.uu.nl/docs/vakken/pv/1415/index.html
tested-with:           GHC == 7.8.3
build-type:            Simple
cabal-version:         >= 1.8
extra-source-files:    Makefile

executable parse-exwhile
  main-is:             GCL.hs
  build-depends:       base >= 4 && < 5, uu-cco >= 0.1.0.1, uhc-light >= 1.1.8.3, uhc-util >= 0.1.3.9
  other-modules:       CCO.ExWhile, CCO.ExWhile.AG, CCO.ExWhile.Base, CCO.ExWhile.Lexer, CCO.ExWhile.Parser
  hs-source-dirs:      src
